// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`validateCallParams > code and deployedbytecode 1`] = `
[InvalidBytecodeError: Cannot have both code and deployedBytecode set

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidbytecodeerror/
Version: 1.1.0.next-73]
`;

exports[`validateCallParams > createTransaction and stateOverrideSet 1`] = `
[InvalidParams: [
  {
    "code": "custom",
    "message": "Invalid Address 0x1234",
    "path": [
      "stateOverrideSet",
      "0x1234"
    ]
  }
]

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidparamserror/
Version: 1.1.0.next-73]
`;

exports[`validateCallParams code and deployedbytecode 1`] = `[InvalidBytecodeError: Cannot have both code and deployedBytecode set

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidbytecodeerror/
Version: 1.1.0.next-73]`;

exports[`validateCallParams createTransaction and stateOverrideSet 1`] = `[_InvalidParamsError: [
  {
    "code": "custom",
    "message": "Invalid Address 0x1234",
    "path": [
      "stateOverrideSet",
      "0x1234"
    ]
  }
]

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidparamserror/
Version: 1.1.0.next-73]`;
